# loganalyzer

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
adapter/: boardfarm_CM.py  boardfarm_cm.py
analyzer/: __init__.py  __main__.py
deeplog/: deeplog_exec.py  deeplog_model_exec.py  deeplog_model_para.py  deeplog_models.py  exec_path_anomaly_pred.py  exec_path_anomaly_train.py  exec_path_anomaly_validate.py  para_value_anomaly_det.py  para_value_anomaly_pred.py  para_value_anomaly_train.py  preprocess_exec.py
detector/: SupervisedLearning_pred.py  SupervisedLearning_train.py  featurextor.py  supervised_learning_pred.py  supervised_learning_train.py  utils.py  weighting.py  weighting_old.py
documents/: LogAnalyzerDesignDocument.docx  LogAnalyzerIntro.pptx  LogLabDesignDocment.docx  UseCaseExploration.docx
entrance/: config.txt  deeplog_config.txt  deeplog_exec_pred.bat  deeplog_exec_pred.sh  deeplog_exec_train.bat  deeplog_exec_train.sh  deeplog_exec_validate.bat  deeplog_exec_validate.sh  deeplog_train_exec.bat  deeplog_train_exec.sh  demo.sh  demo_unix.sh  demo_win.bat  old_school.bat  old_school.sh  pred_pfit_unix.sh  pred_pfit_win.bat  pred_static_unix.sh  pred_static_win.bat  pred_unix.sh  pred_win.bat  runme.sh  temp_updt_unix.sh  temp_updt_win.bat  tmp.bat  tmp.sh  top_pfit_unix.sh  top_pfit_win.bat  top_static_unix.sh  top_static_win.bat  train_pfit_unix.sh  train_pfit_win.bat  train_static_unix.sh  train_static_win.bat  train_unix.sh  train_win.bat
extractor/: dataloader.py  featurextor.py
logs/: logs.7z  (+13 more)
(+371 files in other folders)
