[metadata]
name = analyzer
description = A Python package for log analyzing
author = Wei Han
author_email = wei.han@broadcom.com
license = MIT
platforms = any
classifiers =
    Intended Audience :: Other Audience
    Topic :: System :: Logging
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    scikit-learn
    pandas
    matplotlib
    skl2onnx
    onnxruntime
    click
    pyyaml
    tqdm
    pylint
    pep8
    autopep8
    flake8

[options.entry_points]
console_scripts =
    analyzer = analyzer.scripts.main:cli
